<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SettingsFragment"
    android:background="@color/page_color">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/page_color"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:background="@color/page_color">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="@color/page_color">

                    <ImageView
                        android:layout_width="75sp"
                        android:layout_height="75sp"
                        android:layout_marginLeft="-80dp"
                        android:src="@drawable/user_girl_01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/commande"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="18dp"
                    android:background="@color/page_color">

                    <ImageView
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:src="@drawable/ic_baseline_receipt_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:paddingLeft="@dimen/padding_left_setting_text"
                        android:text="@string/commande"
                        android:textSize="@dimen/size_setting_text"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/securite"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="18dp"
                    android:background="@color/page_color">

                    <ImageView
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:src="@drawable/ic_baseline_security_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="@dimen/padding_left_setting_text"
                        android:text="@string/securite"
                        android:textSize="@dimen/size_setting_text"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/favoris"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="18dp"
                    android:background="@color/page_color"
                    >

                    <ImageView
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:src="@drawable/ic_baseline_favorite_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:text="@string/favoris"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/fidelite"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="18dp"
                    android:background="@color/page_color"
                    >

                    <ImageView
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:src="@drawable/ic_baseline_stars_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:text="@string/fidelite"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/preferences"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:background="@color/page_color"
                    >

                    <ImageView
                        android:layout_width="35sp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_baseline_card_travel_24" />

                    <LinearLayout
                        android:layout_width="414dp"
                        android:layout_height="72dp"
                        android:baselineAligned="true"
                        android:orientation="vertical"
                        android:paddingLeft="14dp"

                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/preferences"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/subtitleçpreferences"
                            android:textColor="@color/text_green"
                            android:textSize="15sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/aide"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="18dp"
                    android:background="@color/page_color"
                    >

                    <ImageView
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:src="@drawable/ic_baseline_help_outline_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:text="Aide"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/promotion"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="18dp"
                    android:background="@color/page_color"
                    >

                    <ImageView
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:src="@drawable/ic_baseline_local_offer_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:text="@string/promotiion"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/delivery"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:background="@color/page_color"
                    >

                    <ImageView
                        android:layout_width="35sp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_baseline_local_shipping_24" />

                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="72dp"
                        android:baselineAligned="true"
                        android:orientation="vertical"
                        android:paddingLeft="14dp"

                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Pass Delivery Food"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/subtitle_pass_delivery"
                            android:textColor="@color/text_green"
                            android:textSize="15sp"
                            android:textStyle="normal" />

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/text_green"
                        android:text="Nouveau"
                        android:textSize="12dp"
                        app:cornerRadius="15dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/delivery_food"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:layout_width="414dp"
                    android:layout_height="72dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="18dp"
                    android:background="@color/page_color"
                    >

                    <ImageView
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:src="@drawable/ic_baseline_delivery_dining_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:text="Livrez avec Delivery Food"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/parametres"
                android:layout_width="match_parent"
                android:layout_height="70dp">
                <LinearLayout
                    android:layout_width="414dp"
                    android:layout_height="72dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="18dp"
                    android:background="@color/page_color"
                    >

                    <ImageView
                        android:layout_width="35sp"
                        android:layout_height="35sp"
                        android:src="@drawable/ic_baseline_settings_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:text="Parametres"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>